--- a/index.html
+++ b/index.html
@@ -113,6 +113,8 @@
                                     <li class="nav-item">
                                         <a class="page-scroll" href="#contact">Contato</a>
                                     </li>
+                                    <li class="nav-item"><a target="_blank" href="https://www.facebook.com/esteticaelizamartins/"><i class="lni-facebook-filled"></i></a></li>
+                                    <li class="nav-item"><a target="_blank" href="https://www.instagram.com/estetica_elizamartins/"><i class="lni-instagram"></i></a></li>
                                 </ul> <!-- navbar nav -->
                             </div>
                             <div class="navbar-btn ml-20 d-none d-sm-block">
@@ -138,7 +140,7 @@
                     </div>
                 </div> <!-- row -->
             </div> <!-- container -->
-            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/banner-image.png)"></div>
+            <div class="banner-image bg_cover" style="background-image: url(assets/images/banner/banner-eliza.png)"></div>
         </div> <!-- header banner -->
 
     </header>
@@ -167,8 +169,11 @@
                     <div class="about-content mt-45">
                         <h4 class="about-welcome">Sobre </h4>
                         <h3 class="about-title mt-10">Por que escolher</h3>
-                        <p class="mt-25">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages
-                            <br> <br>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+                        <p class="mt-25">A Clinica de Estética <span>Eliza Martins</span> efetua os procedimentos com profissionalismo, cuidado e, além disso, muito carinho;
+                            <br><br>
+                            Saúde e beleza caminham juntas, por isso, para ter uma pele bonita e saudável é necessário contar com procedimentos estéticos cada vez mais sofisticados.
+                            <br><br>
+                            Cuidar da aparência facial por meios de tratamentos específicos é imprescindível! Nossa clínica oferece diversos tratamentos que lhe proporcionarão resultados trazendo autoestima e bem estar.</p>
                     </div> <!-- about content -->
                 </div>
             </div> <!-- row -->
@@ -281,11 +286,22 @@
                 <div class="col-lg-4 col-md-6 col-sm-8">
                     <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
                         <div class="single-image">
-                            <img src="assets/images/about/about-1.png" alt="About">
+                            <img src="assets/images/services/celulite.png" alt="About">
+                        </div> <!-- single image -->
+                        <div class="services-content mt-30">
+                            <h4 class="services-title">Tratamento para FEG</h4>
+                            <p class="mt-20">O tratamento do FEG inclui a utilização de cosméticos, a aplicação de ultrassom terapêutico, a drenagem linfática manual e a radiofrequência (RF).</p>
+                        </div>
+                    </div> <!-- single services -->
+                </div>
+                <div class="col-lg-4 col-md-6 col-sm-8">
+                    <div class="single-services text-center mt-30 wow fadeInUp" data-wow-duration="1.5s" data-wow-delay="1.2s">
+                        <div class="single-image">
+                            <img src="assets/images/services/detox-corporal.png" alt="About">
                         </div> <!-- single image -->
                         <div class="services-content mt-15">
-                            <h4 class="services-title">Tratamento para FEG</h4>
-                            <p class="mt-20">Mauris aliquam, turpis sed mattis placerat, justo risus pellentesque quam, id finibus risus arcu eget neque.</p>
+                            <h4 class="services-title">Detox Corporal</h4>
+                            <p class="mt-20">No detox corporal a argila atua como uma máscara corporal e a manta térmica ativa suas propriedades através do calor. A argila possui efeito detox, liberando as toxinas do corpo, e ajudando na redução de inchaço e redução de medidas.</p>
                         </div>
                     </div> <!-- single services -->
                 </div>
@@ -410,22 +426,21 @@
                         <li>
                             <div class="single-info mt-20">
                                 <div class="info-content">
-                                    <i class="lni-envelope"></i> contact@yourmail.com
+                                    <i class="lni-envelope"></i> esteticaelizamartins@gmail.com
                                 </div>
                             </div> <!-- single info -->
                         </li>
                         <li>
                             <div class="single-info mt-20">
                                 <div class="info-content">
-                                    <i class="lni-map"></i> 1234 Avenue New York, US
+                                    <i class="lni-map"></i> Rua Bento Gonçalves D, Nº 280 - ap 02; Edificio Roma - Jardim Itália , Chapecó Sc
                                 </div>
                             </div> <!-- single info -->
                         </li>
                     </ul>
-                        <ul class="footer-social float-right">
-                            <li><a class="single-info mt-20" href="#">Facebook: <i class="lni-facebook-filled"></i></a></li>
-                            <li><a class="single-info mt-20" href="#">Twitter: <i class="lni-twitter-original"></i></a></li>
-                            <li><a class="single-info mt-20" href="#">Instagram: <i class="lni-instagram"></i></a></li>
+                        <ul class="footer-social float-left">
+                            <li><a class="single-info mt-20" target="_blank" href="https://www.facebook.com/esteticaelizamartins/">Facebook: <i class="lni-facebook-filled"></i></a></li>
+                            <li><a class="single-info mt-20" target="_blank" href="https://www.instagram.com/estetica_elizamartins/">Instagram: <i class="lni-instagram"></i></a></li>
                         </ul>
                 </div>
             </div> <!-- row -->
@@ -439,10 +454,10 @@
     <section id="map" class="map-area">
         <div class="mapouter">
             <div class="gmap_canvas">
-                <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=university%20of%20san%20francisco&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
+                <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=R.+Bento+Gonçalves,+280d+-+Jardim+Itália,+Chapecó+-+SC,+89802-070,+Brasil&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
             </div>
         </div>
-        <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(assets/images/map/map-bg.jpg)"></div>
+        <div class="map-bg bg_cover d-none d-lg-block" style="background-image: url(assets/images/map/map-bg.png)"></div>
     </section>
 
     <!--====== MAP PART ENDS ======-->
@@ -491,15 +506,14 @@
                                             <i class="lni-map"></i>
                                         </div>
                                         <div class="info-content">
-                                            <p>1234 Avenue New York, US</p>
+                                            <p>Rua Bento Gonçalves D, Nº 280 - ap 02; Edificio Roma - Jardim Itália , Chapecó Sc</p>
                                         </div>
                                     </div> <!-- single info -->
                                 </li>
                             </ul>
                             <ul class="footer-social mt-20">
-                                <li><a href="#"><i class="lni-facebook-filled"></i></a></li>
-                                <li><a href="#"><i class="lni-twitter-original"></i></a></li>
-                                <li><a href="#"><i class="lni-instagram"></i></a></li>
+                                <li><a target="_blank" href="https://www.facebook.com/esteticaelizamartins/"><i class="lni-facebook-filled"></i></a></li>
+                                <li><a target="_blank" href="https://www.instagram.com/estetica_elizamartins/"><i class="lni-instagram"></i></a></li>
                             </ul>
                         </div> <!-- footer logo -->
                     </div>
@@ -530,6 +544,7 @@
                                 <li><a href="#service">Tratamento Vacuoterapia</a></li>
                                 <li><a href="#service">Pump UP</a></li>
                                 <li><a href="#service">Tratamento para FEG (celulite)</a></li>
+                                <li><a href="#service">Detox Corporal</a></li>
                             </ul>
                         </div>
                     </div>
