--- a/index.html
+++ b/index.html
@@ -496,7 +496,7 @@
                                             <i class="lni-envelope"></i>
                                         </div>
                                         <div class="info-content">
-                                            <p>contact@yourmail.com</p>
+                                            <p>esteticaelizamartins@gmail.com</p>
                                         </div>
                                     </div> <!-- single info -->
                                 </li>
